crates/ssa-workflow-derive/tests/ui/canonical_encode/duplicate_crate.stderr
error: duplicate canonical_encode crate
 --> tests/ui/canonical_encode/duplicate_crate.rs:4:40
  |
4 | #[canonical_encode(crate = "workflow", crate = "other_workflow")]
  |                                        ^^^^^
